--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "npx nodemon ./src/app.js -e .js, .hbs, .css"
+    "start": "node ./src/app.js",
+    "dev": "npx nodemon ./src/app.js -e .js, .hbs, .css"
   },
   "keywords": [],
   "author": "",
