--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "hbs": "^4.2.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "typescript": "^4.7.4"
   }
 }
