--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.7.3",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "hbs": "^4.2.0",
     "request": "^2.88.2",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/request": "^2.48.8"
   }
 }
