--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/hbs": "^4.0.1",
     "@types/request": "^2.48.8"
   }
 }
