.env.example: Updated

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-# Geocode Access Token
+# Geocode Access Token (https://www.mapbox.com/)
 GEOCODE_TOKEN=API KEY HERE
+
+# Open Weather API (https://openweathermap.org/)
+WEATHER_API=OPEN WEATHER API HERE
