Fixed: Showing ambegious name of the city.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc -p src/;node ./build/app.js",
     "dev": "npx nodemon ./src/app.js -e .js, .hbs, .css",
-    "compile": "tsc -p src/ts; tsc -p templates/scripts"
+    "compile": "tsc -p src/; tsc -p templates/scripts"
   },
   "keywords": [],
   "author": "",
