--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.7.3",
+    "all-the-cities": "^3.1.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "hbs": "^4.2.0",
@@ -20,6 +21,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/all-the-cities": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/hbs": "^4.0.1",
     "@types/request": "^2.48.8"
